--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -as terminal-features ",xterm-256color:RGB"
 # Scrolling
 setw -g mouse on
 
-# Start windows and panes at 1, not 0
+# Remap base index from 0 to 1
 set -g base-index 1
 setw -g pane-base-index 1
 
