--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ set -g status-position bottom
 set -g window-status-current-style fg=terminal,bold
 
 # Time settings
-set -g status-right "%I:%M %p, %d-%b-%y, %a"
+set -g status-right "%I:%M %p, %d-%b-%Y, %a"
 
 # Increase left length
 set -g status-left-length 20
