--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,10 +25,10 @@ set -g status-position bottom
 set -g window-status-current-style fg=terminal,bold
 
 # Time settings
-set -g status-right "%I:%M %p, %d-%b-%Y, %a"
+set -g status-right "%I:%M %p, %d-%b-%y, %a"
 
 # Increase left length
-set -g status-left-length 20
+set -g status-left-length 50
 
 # Window Splits
 bind | split-window -h
