--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -153,7 +153,7 @@ set $ws8 
 set $ws9 
 set $ws0 
 set $wsm 
-set $wse 󰕼
+set $wse 
 
 # switch to workspace
 bindsym $mod+grave workspace $wsg
@@ -216,6 +216,7 @@ assign [class="vokoscreenNG"] $ws9
 assign [class="kdenlive"] $ws0
 assign [class="Gimp"] $wsm
 assign [class="vlc"] $wse
+assign [class="steam_app_218390"] $wse
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable border pixel 1
